scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,21 @@
 @import "tailwindcss";
 @layer utilities {
   .scrollbar-custom {
-    /* Set the width of the scrollbar */
     &::-webkit-scrollbar {
-      width: 4px; /* This is your w-1 */
+      width: 4px;
+      height: 4px;
     }
 
-    /* Style the track (background) */
     &::-webkit-scrollbar-track {
-      background-color: #f3f4f6; /* gray-100 */
+      background-color: #f3f4f6;
       border-radius: 9999px;
     }
 
-    /* Style the thumb (the moving part) */
     &::-webkit-scrollbar-thumb {
-      background-color: #d1d5db; /* gray-300 */
+      background-color: #d1d5db;
       border-radius: 9999px;
     }
 
-    /* Dark mode variants */
     .dark &::-webkit-scrollbar-track {
       background-color: #ffffffcd;
     }
